changed background image

--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: LIGHTPINK bottom center;
+  background: url(https://i.pinimg.com/originals/5a/62/9e/5a629e8e3a71e24c91918a7bcc011529.jpg);
   background-size: cover;
 }
 
